--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/platform-server": "~4.0.1",
     "@angular/router": "~4.0.1",
     "@angular/upgrade": "~4.0.1",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.8",
     "angular-2-local-storage": "^1.0.1",
     "angular-in-memory-web-api": "^0.3.1",
     "bootstrap": "^3.3.7",
