--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   ],
   "license": "MIT",
   "dependencies": {
+    "@angular/animations": "^4.0.1",
     "@angular/common": "~4.0.1",
     "@angular/compiler": "~4.0.1",
     "@angular/compiler-cli": "~4.0.1",
@@ -28,7 +29,6 @@
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.8",
     "angular-2-local-storage": "^1.0.1",
     "angular-in-memory-web-api": "^0.3.1",
-    "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "font-loader": "^0.1.2",
     "ie-shim": "^0.1.0",
