--- a/package.json
+++ b/package.json
@@ -39,20 +39,28 @@
   },
   "devDependencies": {
     "@angular/cli": "^1.6.3",
+    "@types/chai": "^4.0.10",
     "@types/node": "^7.0.12",
+    "@types/sinon": "^4.1.2",
     "angular2-router-loader": "^0.3.4",
     "angular2-template-loader": "^0.6.0",
     "awesome-typescript-loader": "^3.1.2",
+    "chai": "^4.1.2",
     "css-loader": "^0.26.0",
     "file-loader": "^1.1.6",
     "html-webpack-plugin": "^2.28.0",
+    "jsdom": "^11.5.1",
+    "mocha": "^4.1.0",
+    "mocha-webpack": "^1.0.1",
     "raw-loader": "^0.5.1",
     "rimraf": "^2.5.4",
+    "sinon": "^4.1.3",
     "to-string-loader": "^1.1.4",
     "typescript": "~2.2.0",
     "webpack": "^2.4.1",
     "webpack-dev-server": "2.4.2",
-    "webpack-merge": "^4.1.0"
+    "webpack-merge": "^4.1.0",
+    "webpack-node-externals": "^1.6.0"
   },
   "keywords": [
     "Angular2",
